--- a/test/e2e/pod-scaler/testdata/zz_fixture_TestAdmission_pod_for_which_we_have_data_patch.yaml
+++ b/test/e2e/pod-scaler/testdata/zz_fixture_TestAdmission_pod_for_which_we_have_data_patch.yaml
@@ -1,1 +1,1 @@
-[{"op":"add","path":"/spec/containers/0/resources/limits","value":{"memory":"43670328"}},{"op":"add","path":"/spec/containers/0/resources/requests","value":{"cpu":"10","memory":"21835164"}},{"op":"add","path":"/spec/priorityClassName","value":"high-priority-nonpreempting"}]
+[{"op":"add","path":"/spec/containers/0/resources/requests","value":{"cpu":"10","memory":"21835164"}},{"op":"add","path":"/spec/priorityClassName","value":"high-priority-nonpreempting"}]
