--- a/pkg/steps/multi_stage/testdata/zz_fixture_TestGeneratePods.yaml
+++ b/pkg/steps/multi_stage/testdata/zz_fixture_TestGeneratePods.yaml
@@ -6,6 +6,9 @@
     creationTimestamp: null
     labels:
       OPENSHIFT_CI: "true"
+      ci.openshift.io/jobid: prow_job_id
+      ci.openshift.io/jobname: job
+      ci.openshift.io/jobtype: postsubmit
       ci.openshift.io/metadata.branch: base_ref
       ci.openshift.io/metadata.org: org
       ci.openshift.io/metadata.repo: repo
@@ -179,6 +182,9 @@
     creationTimestamp: null
     labels:
       OPENSHIFT_CI: "true"
+      ci.openshift.io/jobid: prow_job_id
+      ci.openshift.io/jobname: job
+      ci.openshift.io/jobtype: postsubmit
       ci.openshift.io/metadata.branch: base_ref
       ci.openshift.io/metadata.org: org
       ci.openshift.io/metadata.repo: repo
@@ -346,6 +352,9 @@
     creationTimestamp: null
     labels:
       OPENSHIFT_CI: "true"
+      ci.openshift.io/jobid: prow_job_id
+      ci.openshift.io/jobname: job
+      ci.openshift.io/jobtype: postsubmit
       ci.openshift.io/metadata.branch: base_ref
       ci.openshift.io/metadata.org: org
       ci.openshift.io/metadata.repo: repo
@@ -517,6 +526,9 @@
     creationTimestamp: null
     labels:
       OPENSHIFT_CI: "true"
+      ci.openshift.io/jobid: prow_job_id
+      ci.openshift.io/jobname: job
+      ci.openshift.io/jobtype: postsubmit
       ci.openshift.io/metadata.branch: base_ref
       ci.openshift.io/metadata.org: org
       ci.openshift.io/metadata.repo: repo
@@ -692,6 +704,9 @@
     creationTimestamp: null
     labels:
       OPENSHIFT_CI: "true"
+      ci.openshift.io/jobid: prow_job_id
+      ci.openshift.io/jobname: job
+      ci.openshift.io/jobtype: postsubmit
       ci.openshift.io/metadata.branch: base_ref
       ci.openshift.io/metadata.org: org
       ci.openshift.io/metadata.repo: repo
@@ -859,6 +874,9 @@
     creationTimestamp: null
     labels:
       OPENSHIFT_CI: "true"
+      ci.openshift.io/jobid: prow_job_id
+      ci.openshift.io/jobname: job
+      ci.openshift.io/jobtype: postsubmit
       ci.openshift.io/metadata.branch: base_ref
       ci.openshift.io/metadata.org: org
       ci.openshift.io/metadata.repo: repo
