--- a/pkg/steps/testdata/zz_fixture_TestCreateBuild_with_OAuth_token.yaml
+++ b/pkg/steps/testdata/zz_fixture_TestCreateBuild_with_OAuth_token.yaml
@@ -4,6 +4,9 @@ metadata:
   creationTimestamp: null
   labels:
     OPENSHIFT_CI: "true"
+    ci.openshift.io/jobid: prowJobId
+    ci.openshift.io/jobname: job
+    ci.openshift.io/jobtype: ""
     ci.openshift.io/metadata.branch: ""
     ci.openshift.io/metadata.org: ""
     ci.openshift.io/metadata.repo: ""
