--- a/test/integration/pj-rehearse/candidate/ci-operator/config/super/trooper/super-trooper-master.yaml
+++ b/test/integration/pj-rehearse/candidate/ci-operator/config/super/trooper/super-trooper-master.yaml
@@ -25,6 +25,7 @@ tests:
   commands: make unit CHANGED
   container:
     from: src
+  restrict_network_access: false
 - as: multistage
   steps:
     test:
