--- a/pkg/controller/prpqr_reconciler/testdata/zz_fixture_prowjobs_TestReconcile_basic_aggregated_case_with_scheduling.yaml
+++ b/pkg/controller/prpqr_reconciler/testdata/zz_fixture_prowjobs_TestReconcile_basic_aggregated_case_with_scheduling.yaml
@@ -93,6 +93,7 @@
   status:
     startTime: "1970-01-01T00:00:00Z"
     state: scheduling
+    url: https://prow.ci.openshift.org/view/gs/test-platform-results/aggregator-periodic-ci-test-org-test-repo-test-branch-test-name
 - apiVersion: prow.k8s.io/v1
   kind: ProwJob
   metadata:
@@ -178,6 +179,7 @@
   status:
     startTime: "1970-01-01T00:00:00Z"
     state: scheduling
+    url: https://prow.ci.openshift.org/view/gs/test-platform-results/test-org-test-repo-100-test-name
 - apiVersion: prow.k8s.io/v1
   kind: ProwJob
   metadata:
@@ -263,3 +265,4 @@
   status:
     startTime: "1970-01-01T00:00:00Z"
     state: scheduling
+    url: https://prow.ci.openshift.org/view/gs/test-platform-results/test-org-test-repo-100-test-name
