--- a/pkg/controller/prpqr_reconciler/testdata/zz_fixture_prowjobs_TestReconcile_basic_case_with_scheduling.yaml
+++ b/pkg/controller/prpqr_reconciler/testdata/zz_fixture_prowjobs_TestReconcile_basic_case_with_scheduling.yaml
@@ -82,3 +82,4 @@
   status:
     startTime: "1970-01-01T00:00:00Z"
     state: scheduling
+    url: https://prow.ci.openshift.org/view/gs/test-platform-results/test-org-test-repo-100-test-name
