--- a/pkg/controller/prpqr_reconciler/testdata/zz_fixture_prowjobs_TestReconcile_url_not_found_in_created_job.yaml
+++ b/pkg/controller/prpqr_reconciler/testdata/zz_fixture_prowjobs_TestReconcile_url_not_found_in_created_job.yaml
@@ -3,20 +3,20 @@
   metadata:
     annotations:
       prow.k8s.io/context: ""
-      prow.k8s.io/job: test-org-test-repo-100-test-variant-test-name
-      releaseJobName: periodic-ci-test-org-test-repo-test-branch-test-variant-test-name
+      prow.k8s.io/job: test-org-test-repo-100-test-name
+      releaseJobName: periodic-ci-test-org-test-repo-test-branch-test-name
     creationTimestamp: null
     labels:
       created-by-prow: "true"
       prow.k8s.io/context: ""
-      prow.k8s.io/job: test-org-test-repo-100-test-variant-test-name
+      prow.k8s.io/job: test-org-test-repo-100-test-name
       prow.k8s.io/refs.base_ref: test-branch
       prow.k8s.io/refs.org: test-org
       prow.k8s.io/refs.pull: "100"
       prow.k8s.io/refs.repo: test-repo
       prow.k8s.io/type: periodic
       pullrequestpayloadqualificationruns.ci.openshift.io: prpqr-test
-      releaseJobNameHash: 96fc864a2c83534793cb2d421fbf394a
+      releaseJobNameHash: ee3858eff62263cd7266320c00d1d38b
     name: some-uuid
     namespace: test-namespace
     resourceVersion: "1"
@@ -35,7 +35,7 @@
         sha: "12345"
         title: test-pr
       repo: test-repo
-    job: test-org-test-repo-100-test-variant-test-name
+    job: test-org-test-repo-100-test-name
     pod_spec:
       containers:
       - args:
@@ -44,7 +44,7 @@
         - --input-hash=prpqr-test
         - --report-credentials-file=/etc/report/credentials
         - --target=test-name
-        - --with-test-from=test-org/test-repo@test-branch__test-variant:test-name
+        - --with-test-from=test-org/test-repo@test-branch:test-name
         command:
         - ci-operator
         image: ci-operator:latest
@@ -82,4 +82,3 @@
   status:
     startTime: "1970-01-01T00:00:00Z"
     state: triggered
-    url: https://prow.ci.openshift.org/view/gs/test-platform-results/test-org-test-repo-100-test-variant-test-name
