--- a/pkg/controller/prpqr_reconciler/testdata/zz_fixture_prpqr_TestReconcile_basic_aggregated_case.yaml
+++ b/pkg/controller/prpqr_reconciler/testdata/zz_fixture_prpqr_TestReconcile_basic_aggregated_case.yaml
@@ -42,3 +42,4 @@
       status:
         startTime: "1970-01-01T00:00:00Z"
         state: triggered
+        url: https://prow.ci.openshift.org/view/gs/test-platform-results/aggregator-periodic-ci-test-org-test-repo-test-branch-test-name
