--- a/pkg/controller/prpqr_reconciler/testdata/zz_fixture_prpqr_TestReconcile_basic_aggregated_case_with_scheduling.yaml
+++ b/pkg/controller/prpqr_reconciler/testdata/zz_fixture_prpqr_TestReconcile_basic_aggregated_case_with_scheduling.yaml
@@ -40,3 +40,4 @@
       status:
         startTime: "1970-01-01T00:00:00Z"
         state: scheduling
+        url: https://prow.ci.openshift.org/view/gs/test-platform-results/aggregator-periodic-ci-test-org-test-repo-test-branch-test-name
