--- a/pkg/controller/prpqr_reconciler/testdata/zz_fixture_prpqr_TestReconcile_basic_case_with_metal_override.yaml
+++ b/pkg/controller/prpqr_reconciler/testdata/zz_fixture_prpqr_TestReconcile_basic_case_with_metal_override.yaml
@@ -41,3 +41,4 @@
       status:
         startTime: "1970-01-01T00:00:00Z"
         state: triggered
+        url: https://prow.ci.openshift.org/view/gs/test-platform-results/test-org-test-repo-100-test-name-metal
