--- a/pkg/controller/prpqr_reconciler/testdata/zz_fixture_prpqr_TestReconcile_url_not_found_in_created_job.yaml
+++ b/pkg/controller/prpqr_reconciler/testdata/zz_fixture_prpqr_TestReconcile_url_not_found_in_created_job.yaml
@@ -29,14 +29,15 @@
   status:
     conditions:
     - lastTransitionTime: "1970-01-01T00:00:00Z"
-      message: All jobs triggered successfully
-      reason: AllJobsTriggered
-      status: "True"
+      message: Jobs triggered with errors
+      reason: WithErrors
+      status: "False"
       type: AllJobsTriggered
     jobs:
     - jobName: periodic-ci-test-org-test-repo-test-branch-test-name
       prowJob: some-uuid
       status:
+        description: 'created job never appeared in cache: timed out waiting for the
+          condition'
         startTime: "1970-01-01T00:00:00Z"
-        state: scheduling
-        url: https://prow.ci.openshift.org/view/gs/test-platform-results/test-org-test-repo-100-test-name
+        state: error
